Moved Axbench in top repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 build
 .idea
+
+test/axbench/*/obj/
+test/axbench/*/bin/
+test/axbench/*/data/output
+test/axbench/*/stats/
+
+test/axbench/*/tmp.err
+test/axbench/*/tmp.log
+test/axbench/*/*.tmp
+
+test/axbench/raw-times
+test/axbench/results
+test/axbench/*_results
+test/axbench/*_results.zip
+
+test/axbench/kmeans/correct_output
+test/axbench/kmeans/src_before
+test/axbench/fft/orig_src
+test/axbench/blackscholes/orig_src
