--- a/MDUtils/CMakeLists.txt
+++ b/MDUtils/CMakeLists.txt
@@ -1,3 +1,7 @@
+find_package(LLVM REQUIRED CONFIG)
+
+include_directories(${LLVM_INCLUDE_DIRS})
+
 add_library(MDUtils
   Metadata.cpp
   InputInfo.cpp
