Rename MDUtils to TaffoUtils because it would be useful to put more than metadata code in a shared package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(ErrorAnalysis)
 add_subdirectory(Initializer)
 add_subdirectory(RangeAnalysis)
 
-add_subdirectory(MDUtils)
+add_subdirectory(TaffoUtils)
