--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.4.3) # like llvm
 
 project(Taffo)
 
-add_subdirectory(Autotuner)
+add_subdirectory(DataTypeAlloc)
 add_subdirectory(Conversion)
 add_subdirectory(ErrorAnalysis)
 add_subdirectory(Initializer)
