--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ add_subdirectory(Conversion)
 add_subdirectory(ErrorAnalysis)
 add_subdirectory(Initializer)
 add_subdirectory(RangeAnalysis)
+add_custom_target(taffo)
+add_dependencies(taffo LLVMFloatToFixed TaffoDTA LLVMErrorPropagator TaffoInitializer TaffoVRA)
 
 add_subdirectory(TaffoUtils)
 add_subdirectory(LibVCSupport)
+add_subdirectory(test/axbench-libvc)
