--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 build*
 .idea
 
-test/polybench-c-4.2.1-beta/raw-times
-test/polybench-c-4.2.1-beta/raw-times-*
-test/polybench-c-4.2.1-beta/multiconf_results
-test/polybench-c-4.2.1-beta/*.log
-test/polybench-c-4.2.1-beta/*_multiconf_results
-test/polybench-c-4.2.1-beta/output-data-32
-test/polybench-c-4.2.1-beta/output-data-64
-test/polybench-c-4.2.1-beta/stats
 build.log
 *.zip
 dist
@@ -16,6 +8,7 @@ dist
 *.magiclangtmp.s
 .vscode
 *.out
-test/simple-test-cases/*.log
+*.log
 working-dist
 test/simple-test-cases-FOR-REGRESSION
+working-dist-llvm6
