--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_custom_target(taffo)
 add_dependencies(taffo LLVMFloatToFixed TaffoDTA LLVMErrorPropagator TaffoInitializer TaffoVRA)
 
 add_subdirectory(TaffoUtils)
+add_subdirectory(tool)
