Rename the instruction mix tool to taffo-instmix

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -13,14 +13,14 @@ add_definitions(${LLVM_DEFINITIONS})
 
 llvm_map_components_to_libnames(llvm_libs support core irreader)
 
-add_executable(istr_type
-  istr_type.cpp
+add_executable(taffo-instmix
+  taffo-instmix.cpp
 )
-target_link_libraries(istr_type ${llvm_libs})
-set_property(TARGET istr_type PROPERTY CXX_STANDARD 11)
-set_property(TARGET istr_type PROPERTY CXX_STANDARD_REQUIRED ON)
+target_link_libraries(taffo-instmix ${llvm_libs})
+set_property(TARGET taffo-instmix PROPERTY CXX_STANDARD 11)
+set_property(TARGET taffo-instmix PROPERTY CXX_STANDARD_REQUIRED ON)
 if (NOT LLVM_ENABLE_RTTI)
-  target_compile_options(istr_type PRIVATE -fno-rtti)
+  target_compile_options(taffo-instmix PRIVATE -fno-rtti)
 endif()
-install(TARGETS istr_type DESTINATION bin)
+install(TARGETS taffo-instmix DESTINATION bin)
 
