Start work on a feature extractor tool

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -11,7 +11,25 @@ include(AddLLVM)
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-llvm_map_components_to_libnames(llvm_libs support core irreader)
+llvm_map_components_to_libnames(llvm_libs
+  AggressiveInstCombine
+  Analysis
+  BitWriter
+  CodeGen
+  Core
+  Coroutines
+  IPO
+  IRReader
+  InstCombine
+  Instrumentation
+  MC
+  ObjCARCOpts
+  ScalarOpts
+  Support
+  Target
+  TransformUtils
+  Vectorize
+  Passes)
 
 add_executable(taffo-instmix
   taffo-instmix.cpp
@@ -24,3 +42,15 @@ if (NOT LLVM_ENABLE_RTTI)
 endif()
 install(TARGETS taffo-instmix DESTINATION bin)
 
+add_executable(taffo-mlfeat
+  taffo-mlfeat.cpp
+  TaffoMLFeaturesAnalysis.cpp
+  TaffoMLFeaturesAnalysis.h
+)
+target_link_libraries(taffo-mlfeat ${llvm_libs})
+set_property(TARGET taffo-mlfeat PROPERTY CXX_STANDARD 11)
+set_property(TARGET taffo-mlfeat PROPERTY CXX_STANDARD_REQUIRED ON)
+if (NOT LLVM_ENABLE_RTTI)
+  target_compile_options(taffo-mlfeat PRIVATE -fno-rtti)
+endif()
+install(TARGETS taffo-mlfeat DESTINATION bin)
