--- a/utils/unittest/UnitTestMain/CMakeLists.txt
+++ b/utils/unittest/UnitTestMain/CMakeLists.txt
@@ -12,3 +12,6 @@ add_llvm_library(gtest_main
   )
 set_property(TARGET gtest_main PROPERTY CXX_STANDARD 11)
 set_property(TARGET gtest_main PROPERTY CXX_STANDARD_REQUIRED ON)
+if (NOT LLVM_ENABLE_RTTI)
+  target_compile_options(gtest_main PRIVATE -fno-rtti)
+endif()
