Start writing an utility template for replacing ValueInfos and conversion queues.

--- a/TaffoUtils/CMakeLists.txt
+++ b/TaffoUtils/CMakeLists.txt
@@ -3,12 +3,13 @@ find_package(LLVM REQUIRED CONFIG)
 include_directories(${LLVM_INCLUDE_DIRS})
 
 add_library(TaffoUtils
-  Metadata.cpp
-  InputInfo.cpp
   Metadata.h
+  Metadata.cpp
   InputInfo.h
+  InputInfo.cpp
   TypeUtils.h
   TypeUtils.cpp
+  MultiValueMap.h
 )
 
 set_property(TARGET TaffoUtils PROPERTY CXX_STANDARD 11)
