added Utils for special function

--- a/TaffoUtils/CMakeLists.txt
+++ b/TaffoUtils/CMakeLists.txt
@@ -3,13 +3,13 @@ find_package(LLVM REQUIRED CONFIG)
 include_directories(${LLVM_INCLUDE_DIRS})
 
 add_library(TaffoUtils
-  Metadata.h
   Metadata.cpp
-  InputInfo.h
   InputInfo.cpp
+  Metadata.h
+  InputInfo.h
   TypeUtils.h
   TypeUtils.cpp
-  MultiValueMap.h
+  handle.h
 )
 
 set_property(TARGET TaffoUtils PROPERTY CXX_STANDARD 11)
