[*] begin standardizing directory layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,19 @@ project(Taffo)
 find_package(LLVM REQUIRED CONFIG)
 add_definitions(${LLVM_DEFINITIONS})
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
-include_directories(${LLVM_INCLUDE_DIRS}
-  TaffoUtils)
+include_directories(
+  ${LLVM_INCLUDE_DIRS}
+  TaffoUtils
+  lib/InstructionMix)
 include(AddLLVM)
 include(HandleLLVMOptions)
 
 # to be kept in sync with LLVM!
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# build & install all tools by default
+set(LLVM_BUILD_TOOLS ON)
 
 add_subdirectory(Initializer)
 add_subdirectory(RangeAnalysis)
@@ -38,6 +43,7 @@ add_llvm_library(Taffo MODULE
   opt
 )
 
+add_subdirectory(lib)
 add_subdirectory(utils)
 add_subdirectory(unittests)
 add_subdirectory(tool)
