[*] Use implicit include directories instead of specifying them manually

--- a/TaffoUtils/CMakeLists.txt
+++ b/TaffoUtils/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(TaffoUtils
+set(SELF TaffoUtils)
+
+add_library(${SELF}
   Metadata.h
   Metadata.cpp
   InputInfo.h
@@ -7,5 +9,5 @@ add_library(TaffoUtils
   TypeUtils.cpp
   MultiValueMap.h
 )
-
-set_property(TARGET TaffoUtils PROPERTY POSITION_INDEPENDENT_CODE ON)
+target_include_directories(${SELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+set_property(TARGET ${SELF} PROPERTY POSITION_INDEPENDENT_CODE ON)
