--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,7 @@ project(Taffo)
 find_package(LLVM REQUIRED CONFIG)
 add_definitions(${LLVM_DEFINITIONS})
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
-include_directories(
-  ${LLVM_INCLUDE_DIRS}
-  TaffoUtils
-  lib/InstructionMix)
+include_directories(${LLVM_INCLUDE_DIRS})
 include(AddLLVM)
 include(HandleLLVMOptions)
 
