--- a/lib/InstructionMix/CMakeLists.txt
+++ b/lib/InstructionMix/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_library(InstructionMix
+set(SELF InstructionMix)
+  
+add_library(${SELF}
   InstructionMix.cpp
   InstructionMix.h
   )
+target_include_directories(${SELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
