--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # build & install all tools by default
 set(LLVM_BUILD_TOOLS ON)
 
+# fix add_llvm_tool on macOS+Xcode
+set(LLVM_MAIN_SRC_DIR ${CMAKE_SOURCE_DIR})
+
 add_subdirectory(lib)
 add_subdirectory(utils)
 add_subdirectory(unittests)
