[CMake] fix Taffo.dylib build with Xcode

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -13,6 +13,7 @@ add_llvm_library(Taffo MODULE
   $<TARGET_OBJECTS:obj.TaffoDTA>
   $<TARGET_OBJECTS:obj.LLVMFloatToFixed>
   $<TARGET_OBJECTS:obj.LLVMErrorPropagator>
+  ../cmake/dummy.cpp
 
   LINK_LIBS
   TaffoUtils
