--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(Taffo)
 find_package(LLVM REQUIRED CONFIG)
 add_definitions(${LLVM_DEFINITIONS})
 cmake_policy(SET CMP0077 NEW)
+cmake_policy(SET CMP0079 NEW)
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
 include_directories(${LLVM_INCLUDE_DIRS})
 include(AddLLVM)
@@ -28,4 +29,3 @@ add_subdirectory(utils)
 #add_subdirectory(unittests)
 add_subdirectory(tool)
 
-target_link_libraries(Taffo PRIVATE ortools::ortools)
