--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,16 @@ cmake_minimum_required(VERSION 3.12) # for FindPython
 
 project(Taffo)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 find_package(LLVM REQUIRED CONFIG)
+
+# Protobuf is a dependency to ortools, but its cmake files might not have been
+# installed so we try to find it before ortool does in order to use the 
+# FindProtobuf.cmake we ship if necessary
+find_package(Protobuf REQUIRED)
+find_package(ortools CONFIG REQUIRED)
+
 add_definitions(${LLVM_DEFINITIONS})
 cmake_policy(SET CMP0077 NEW)
 cmake_policy(SET CMP0079 NEW)
@@ -11,7 +20,6 @@ include_directories(${LLVM_INCLUDE_DIRS})
 include(AddLLVM)
 include(HandleLLVMOptions)
 
-find_package(ortools CONFIG REQUIRED)
 # to be kept in sync with LLVM!
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
