Fix linking options of taffo-costmodel.

--- a/tool/taffo-costmodel/CMakeLists.txt
+++ b/tool/taffo-costmodel/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(${SELF}
 target_compile_definitions(${SELF} PRIVATE
   -DNOFLT80 -DNOFLT128 -DNBRUN=128 -DMEMSIZE=10000000
   )
+target_link_libraries(${SELF} m)
 
 install(TARGETS ${SELF})
 
