--- a/lib/TaffoUtils/CMakeLists.txt
+++ b/lib/TaffoUtils/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(${SELF}
   TypeUtils.h
   TypeUtils.cpp
   MultiValueMap.h
+  LLVMVersions.cpp
+  LLVMVersions.h
 )
 target_include_directories(${SELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 set_property(TARGET ${SELF} PROPERTY POSITION_INDEPENDENT_CODE ON)
