--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,8 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 tab_width = 8
+
+[Makefile]
+indent_size = 4
+tab_width = 4
+indent_style = tab
