Taffo.sh: always use the current system shell

--- a/tool/taffo/CMakeLists.txt
+++ b/tool/taffo/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(
   WRITE
   ${CMAKE_CURRENT_BINARY_DIR}/taffo-config.sh
-  "printf '#!/bin/bash\\nLLVM_DIR=\"%s\"\\n\' \"${LLVM_INSTALL_PREFIX}\" | cat - \"${CMAKE_CURRENT_SOURCE_DIR}/taffo.sh\" > taffo"
+  "printf '#!/usr/bin/env bash\\nLLVM_DIR=\"%s\"\\n\' \"${LLVM_INSTALL_PREFIX}\" | cat - \"${CMAKE_CURRENT_SOURCE_DIR}/taffo.sh\" > taffo"
   )
 add_custom_command(
   OUTPUT
