add documentation on running unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ set(LLVM_BUILD_TOOLS ON)
 # fix add_llvm_tool on macOS+Xcode
 set(LLVM_MAIN_SRC_DIR ${CMAKE_SOURCE_DIR})
 
+enable_testing()
+
 add_subdirectory(lib)
 add_subdirectory(utils)
 add_subdirectory(unittests)
